--- a/src/dorty.html
+++ b/src/dorty.html
@@ -96,7 +96,7 @@
 
 <a name="cerny-dort-se-zavareninkou"><h2>Černý dort se zavařeninkou</h2></a>
 
-<p>Vezmi na vál čtvrt libry mouky, čtvrt libry se <b>s</b>lupinami strouhaných mandli, čtvrt libry černého tlučeného cukru, čtvrt libry másla, čtvrt libry piškotových drobtů, trochu skořice, trochu hřebíčku, kouštínek badiánu, vše dohromady hodně smíchej a zadělej to čtyřmi žloutky, pak udělej z toho těsta jak chceš velký koláč, pomaž ho zavařeninkou, udělej na něj hezky husté mříže a okolek, každou mřížku pomaž bílým ledem, dej dort do trouby pect a často naň dohlížej.</p>
+<p>Vezmi na vál čtvrt libry mouky, čtvrt libry se slupinami strouhaných mandli, čtvrt libry černého tlučeného cukru, čtvrt libry másla, čtvrt libry piškotových drobtů, trochu skořice, trochu hřebíčku, kouštínek badiánu, vše dohromady hodně smíchej a zadělej to čtyřmi žloutky, pak udělej z toho těsta jak chceš velký koláč, pomaž ho zavařeninkou, udělej na něj hezky husté mříže a okolek, každou mřížku pomaž bílým ledem, dej dort do trouby pect a často naň dohlížej.</p>
 
 <a name="dort-maslovy-nebo-listkovy"><h2>Dort máslový nebo lístkový</h2></a>
 
