--- a/src/kolace-buchty-rozlicne-jine-pecivo-a-pamlsky.html
+++ b/src/kolace-buchty-rozlicne-jine-pecivo-a-pamlsky.html
@@ -96,7 +96,7 @@
 
 <a name="dobra-buchta"><h2>Dobrá buchta</h2></a>
 
-<p>Utři čtvrt libry nového másla, dej do žejdlíka dobré kyselé smetany 6 žloutků, 3 lžíce hustých kvasnic, asi dva loty tlučeného cukru, trochu soli, všecko dobře rozkloktej, pak tím zadělej pěknou suchou mouku hezky hustě, těsto dobře vypracuj, až jde od vařečky, načež posyp servít moukou, rozválej na něm těsto asi na dvě stébla tlustě, pomaž ho rozpuštěným máslem, posyp tlučeným cukrem a skořicí pak na dlouho rozkrájenými mandlemi, vymaž formu máslem, vysyp ji aneb vylož mandlemi, buchtu pěkně sviň, dej ji do formy a nech ji tři čtvrtě hodiny kynout<b>, </b>pak aspoň tři čtvrtě hodiny pect; potom ji vyklop, posyp cukrem a skořicí a nech ji vystydnout. Do této buchty můžeš také místo uvedených věcí dáti dobře upravený mák.</p>
+<p>Utři čtvrt libry nového másla, dej do žejdlíka dobré kyselé smetany 6 žloutků, 3 lžíce hustých kvasnic, asi dva loty tlučeného cukru, trochu soli, všecko dobře rozkloktej, pak tím zadělej pěknou suchou mouku hezky hustě, těsto dobře vypracuj, až jde od vařečky, načež posyp servít moukou, rozválej na něm těsto asi na dvě stébla tlustě, pomaž ho rozpuštěným máslem, posyp tlučeným cukrem a skořicí pak na dlouho rozkrájenými mandlemi, vymaž formu máslem, vysyp ji aneb vylož mandlemi, buchtu pěkně sviň, dej ji do formy a nech ji tři čtvrtě hodiny kynout, pak aspoň tři čtvrtě hodiny pect; potom ji vyklop, posyp cukrem a skořicí a nech ji vystydnout. Do této buchty můžeš také místo uvedených věcí dáti dobře upravený mák.</p>
 
 <a name="trena-buchta"><h2>Třená buchta</h2></a>
 
@@ -164,7 +164,7 @@
 
 <a name="jine-tycky-k-caji"><h2>Jiné tyčky k čaji</h2></a>
 
-<p>Dej na vál dvacet lotů mouky a vmíchej do ni zlehka půl libry čerstvého másla tak, aby se máslo od mouky dělilo, pak v tom udělej důlek, vraz do něho dva žloutky, dej k tomu dvě lžíce hustých kvasnic, nebo hustý kvásek z lotu lisovaných kvasnic, asi šest lžic smetany, osol to trochu a zadělej těsto nožem, načež ho rukama několikrát zlehka prohnět a nech ho odpočinout; potom ho tenče rozválej, vykroj z něho kružátkem na čtvrt lokte široký pruh, z tohoto pak zas přespříč krájej na prst široké proužky, klad je na nepomaštěný plech, potři je rozkloktaným, vejcem, posyp je trochu solí a chceš-li i kmínem, a nech je hned v dobře vyhřáté troubě pect; když vychladnou, urovnej je do hraničk<b>y </b>na talíř.</p>
+<p>Dej na vál dvacet lotů mouky a vmíchej do ni zlehka půl libry čerstvého másla tak, aby se máslo od mouky dělilo, pak v tom udělej důlek, vraz do něho dva žloutky, dej k tomu dvě lžíce hustých kvasnic, nebo hustý kvásek z lotu lisovaných kvasnic, asi šest lžic smetany, osol to trochu a zadělej těsto nožem, načež ho rukama několikrát zlehka prohnět a nech ho odpočinout; potom ho tenče rozválej, vykroj z něho kružátkem na čtvrt lokte široký pruh, z tohoto pak zas přespříč krájej na prst široké proužky, klad je na nepomaštěný plech, potři je rozkloktaným, vejcem, posyp je trochu solí a chceš-li i kmínem, a nech je hned v dobře vyhřáté troubě pect; když vychladnou, urovnej je do hraničky na talíř.</p>
 
 <a name="malinke-preclicky-k-caji"><h2>Malinké preclíčky k čaji</h2></a>
 
