--- a/src/moucna-jidla-obycejna-i-jemnejsi.html
+++ b/src/moucna-jidla-obycejna-i-jemnejsi.html
@@ -140,7 +140,7 @@
 
 <a name="zemlickovy-svitek-s-povidlami"><h2>Žemličkový svítek s povidlami</h2></a>
 
-<p>Vraz db hrnku 6 celých vajec a hodně je rozmíchej, dej k tomu půl druhé, dříve ostrouhané, pak zestrouhané žemličky, přilej do toho tři čtvrtě žejdlíka sladké smetany, hodně to rozmíchej, dej k tomu trošinku soli, dva loty tlučeného cukru, trochu hřebíčku, a ještě to hodně rozkloktej; nyní vymaž formu máslem, vysyp ji žemličkovou kůrkou, vlej do ní polovic té rozmíchané kasičky<b>, </b>tuto poklad hromádky povidel, které však dříve citronovou kůrou, cukrem a hřebíčkem nebo skořicí připravené býti musejí, na to nalej druhou polovičku té kasičky<b>, </b>posyp to cukrem a nech to upéct. Když je to upečené, nechá se to buď ve formě, posype se to cukrem, anebo se to vyklopí, posype cukrem a dá se to na tabuli. – Tento svítek může se rozličně měnit; místo švestkových povidel mohou se vzít zavařené višně, třešně, rybíz atd.</p>
+<p>Vraz db hrnku 6 celých vajec a hodně je rozmíchej, dej k tomu půl druhé, dříve ostrouhané, pak zestrouhané žemličky, přilej do toho tři čtvrtě žejdlíka sladké smetany, hodně to rozmíchej, dej k tomu trošinku soli, dva loty tlučeného cukru, trochu hřebíčku, a ještě to hodně rozkloktej; nyní vymaž formu máslem, vysyp ji žemličkovou kůrkou, vlej do ní polovic té rozmíchané kasičky, tuto poklad hromádky povidel, které však dříve citronovou kůrou, cukrem a hřebíčkem nebo skořicí připravené býti musejí, na to nalej druhou polovičku té kasičky, posyp to cukrem a nech to upéct. Když je to upečené, nechá se to buď ve formě, posype se to cukrem, anebo se to vyklopí, posype cukrem a dá se to na tabuli. – Tento svítek může se rozličně měnit; místo švestkových povidel mohou se vzít zavařené višně, třešně, rybíz atd.</p>
 
 <a name="zemlickove-jidlo-s-rumem"><h2>Žemličkové jídlo s rumem</h2></a>
 
@@ -264,7 +264,7 @@
 
 <a name="zelniky-bez-kvasnic"><h2>Zelníky bez kvasnic</h2></a>
 
-<p>Dej na mísu libru pěkné mouky, do hrnečku vraz 8 žloutků, přilej vlažné smetany, dej k tomu trochu soli, trochu cukru, a zadělej tím tuhé těsto jako na buchtičky. Když je hodně vypracováno, dej ho na vál a rozválej ho, nakrájej na něj půl libry čerstvého másla, a překládej a rozválej ho tak jako při máslovém těstu, až není vidět žádné máslo; potom rozválej těsto na tenké lístky<b>, </b>poklaď vždy jeden lístek dobře připraveným zelím, na to polož druhý lístek, a když jsou všecky, dej je na pomazaný plech a nech je upéct.</p>
+<p>Dej na mísu libru pěkné mouky, do hrnečku vraz 8 žloutků, přilej vlažné smetany, dej k tomu trochu soli, trochu cukru, a zadělej tím tuhé těsto jako na buchtičky. Když je hodně vypracováno, dej ho na vál a rozválej ho, nakrájej na něj půl libry čerstvého másla, a překládej a rozválej ho tak jako při máslovém těstu, až není vidět žádné máslo; potom rozválej těsto na tenké lístky, poklaď vždy jeden lístek dobře připraveným zelím, na to polož druhý lístek, a když jsou všecky, dej je na pomazaný plech a nech je upéct.</p>
 
 <a name="zelne-svitky"><h2>Zelné svítky</h2></a>
 
@@ -312,7 +312,7 @@
 
 <a name="jidlo-oplatkove"><h2>Jídlo oplatkové</h2></a>
 
-<p>Vezmi dobrých oplatků, vymaž formu máslem, omoč oplatek spěšně ve smetaně a hned ho polož do formy, ustrouhej sladkých mandli a mezi ně několik hořkých nebo kousek tlučené vanilie, kolik lotů mandlí, tolik lotů cukru, posyp tím ten oplatek, pak na to zase polož ve smetaně smočený oplatek, ten zase posyp, a tak pokračuj, až jest forma na dva prsty neplná; nyní rozkloktej na 10 nebo 12 oplatků 4 žloutky v půl žejdlíku smetaně, dej do toho asi lot tlučeného cukru a trochu soli, dobře to rozkloktej, polej tím ty oplatky a nech to chvíli pect, až to začne žloutnout; pak udělej ze dvou bílků hodně tuhý sníh, zamíchej spěšně do něho lžíci tlučeného cukru a dej ho navrch na ty oplatky buď po celém<b>, </b>nebo jen věnec okolo a hromádku do prostředka, ještě to povrchu hodně cukrem posyp a nech to hezky do zlatova upéct. Trouba však nesmí býti příliš horká, sice by se to povrchu připálilo a v prostředku by to zůstalo syrové. Na 12 oplatků se vezme 4 loty sladkých mandlí, půl lotu hořkých, dva loty cukru, a místo vanilie může se též dát citronová kůra nebo skořice.</p>
+<p>Vezmi dobrých oplatků, vymaž formu máslem, omoč oplatek spěšně ve smetaně a hned ho polož do formy, ustrouhej sladkých mandli a mezi ně několik hořkých nebo kousek tlučené vanilie, kolik lotů mandlí, tolik lotů cukru, posyp tím ten oplatek, pak na to zase polož ve smetaně smočený oplatek, ten zase posyp, a tak pokračuj, až jest forma na dva prsty neplná; nyní rozkloktej na 10 nebo 12 oplatků 4 žloutky v půl žejdlíku smetaně, dej do toho asi lot tlučeného cukru a trochu soli, dobře to rozkloktej, polej tím ty oplatky a nech to chvíli pect, až to začne žloutnout; pak udělej ze dvou bílků hodně tuhý sníh, zamíchej spěšně do něho lžíci tlučeného cukru a dej ho navrch na ty oplatky buď po celém, nebo jen věnec okolo a hromádku do prostředka, ještě to povrchu hodně cukrem posyp a nech to hezky do zlatova upéct. Trouba však nesmí býti příliš horká, sice by se to povrchu připálilo a v prostředku by to zůstalo syrové. Na 12 oplatků se vezme 4 loty sladkých mandlí, půl lotu hořkých, dva loty cukru, a místo vanilie může se též dát citronová kůra nebo skořice.</p>
 
 <a name="makaronky"><h2>Makaronky</h2></a>
 
