--- a/src/nadivky-do-kolacu-buchticek-a-koblih.html
+++ b/src/nadivky-do-kolacu-buchticek-a-koblih.html
@@ -6,7 +6,7 @@
 
 <a name="mak"><h2>Mák</h2></a>
 
-<p>Mák se může buď tlouct za subha, nebo se dříve přemeje ve vodě, pak ve smetaně do měkka uvaří a potom se ve zvláštní k tomu zřízené pánvi dobře rozetře. Když jest rozetřen, dá se na rendlíček, k němu kousek másla, a je-li za sucha tlučen, tedy se přileje do něho sladké smetany, a nechá se ještě vařit, aby z něho byla hustá kašička<b>, </b>přidá se k němu buď cukru nebo českého medu tolik, aby byl dostatečně sladký, pak se do něho dá dle libosti buď citronové nebo cukrované pomerančové kůry a buď hřebíčku nebo skořice anebo květu. Každý si může dle libosti dát chuť jakou chce.</p>
+<p>Mák se může buď tlouct za subha, nebo se dříve přemeje ve vodě, pak ve smetaně do měkka uvaří a potom se ve zvláštní k tomu zřízené pánvi dobře rozetře. Když jest rozetřen, dá se na rendlíček, k němu kousek másla, a je-li za sucha tlučen, tedy se přileje do něho sladké smetany, a nechá se ještě vařit, aby z něho byla hustá kašička, přidá se k němu buď cukru nebo českého medu tolik, aby byl dostatečně sladký, pak se do něho dá dle libosti buď citronové nebo cukrované pomerančové kůry a buď hřebíčku nebo skořice anebo květu. Každý si může dle libosti dát chuť jakou chce.</p>
 
 <a name="tvaroh"><h2>Tvaroh</h2></a>
 
