--- a/src/rozlicne-octy.html
+++ b/src/rozlicne-octy.html
@@ -2,7 +2,7 @@
 
 <a name="ocet-estragonovy"><h2>Ocet estragonový</h2></a>
 
-<p>Hrst čerstvě natrhaných, nevypraných estragonových lístků dej do skleněné láhve, nalej na ně asi čtyry žejdlíky dobrého vinního octa a nech láhev dobře zandanou čtrnáct dní na slunci stát; potom ocet skrze čistý starý ubrousek proceď do malých lahviček<b>, </b>zandej je a uschovej k potřebě.</p>
+<p>Hrst čerstvě natrhaných, nevypraných estragonových lístků dej do skleněné láhve, nalej na ně asi čtyry žejdlíky dobrého vinního octa a nech láhev dobře zandanou čtrnáct dní na slunci stát; potom ocet skrze čistý starý ubrousek proceď do malých lahviček, zandej je a uschovej k potřebě.</p>
 
 <a name="ocet-bylinkovy"><h2>Ocet bylinkový</h2></a>
 
@@ -10,9 +10,9 @@
 
 <a name="ocet-malinovy"><h2>Ocet malinový</h2></a>
 
-<p>Na dva žejdlíky pěkných zralých malin nalej čtyry žejdlíky dobrého vinního octa a nech to dobře přikryté asi šest dni nepohnutě stát; potom ocet proceď skrze čisté plátno do jiné nádoby, a když. se usadí, opět ho proceď, načež ho nalej do malých lahviček<b>, </b>zandej je dobře a uschovej.</p>
+<p>Na dva žejdlíky pěkných zralých malin nalej čtyry žejdlíky dobrého vinního octa a nech to dobře přikryté asi šest dni nepohnutě stát; potom ocet proceď skrze čisté plátno do jiné nádoby, a když. se usadí, opět ho proceď, načež ho nalej do malých lahviček, zandej je dobře a uschovej.</p>
 
-<p>Také se může malinový ocet následovně připravit: Když ocet sleješ, promačkej skrze plátno na čistý nový kastrol šťávu z malin, přidej k ní půl libry cukru a nech to vařit, přičemž pěnu pilně sbírat musíš, pak to smíchej s octem, naplň lahvičky<b>, </b>dobře je zandej, rozpuštěnou smolou zalej a uschovej. – Takto připravený ocet neměl by scházet v žádné domácnosti, neboť se hodí ke mnohým pokrmům a zvláště v nemoci poskytuje, s vodou smíšený, velmi občerstvující nápoj.</p>
+<p>Také se může malinový ocet následovně připravit: Když ocet sleješ, promačkej skrze plátno na čistý nový kastrol šťávu z malin, přidej k ní půl libry cukru a nech to vařit, přičemž pěnu pilně sbírat musíš, pak to smíchej s octem, naplň lahvičky, dobře je zandej, rozpuštěnou smolou zalej a uschovej. – Takto připravený ocet neměl by scházet v žádné domácnosti, neboť se hodí ke mnohým pokrmům a zvláště v nemoci poskytuje, s vodou smíšený, velmi občerstvující nápoj.</p>
 
 <p>Ocet jahodový připravuje se tak jako malinový.</p>
 
