--- a/src/smazeniny-pofezky-svitky-a-kotletky.html
+++ b/src/smazeniny-pofezky-svitky-a-kotletky.html
@@ -28,7 +28,7 @@
 
 <a name="smazeny-teleci-mozek"><h2>Smažený telecí mozek</h2></a>
 
-<p>Telecí mozek omej dříve ve studené a potom v teplé vodě, kůžičky opatrně stáhni, aby mozek se nerozbryndal, každou polovici rozděl na tři nebo čtyry kousky, vlož ho na misku a osol<b>, </b>každý kousek obal v mouce, omoč v rozkloktaném vejci, obal ve strouhané žemličce a usmaž v rozpáleném přepouštěném másle.</p>
+<p>Telecí mozek omej dříve ve studené a potom v teplé vodě, kůžičky opatrně stáhni, aby mozek se nerozbryndal, každou polovici rozděl na tři nebo čtyry kousky, vlož ho na misku a osol, každý kousek obal v mouce, omoč v rozkloktaném vejci, obal ve strouhané žemličce a usmaž v rozpáleném přepouštěném másle.</p>
 
 <a name="svitecky-z-teleciho-mozku"><h2>Svítečky z telecího mozku</h2></a>
 
