--- a/src/zeleniny.html
+++ b/src/zeleniny.html
@@ -44,7 +44,7 @@
 
 <a name="karfiol-v-kremu-pro-8-osob"><h2>Karfiol v krému pro 8 osob</h2></a>
 
-<p>Uvař karfiol na polo v hovězí polívce, vymaž mísu máslem, urovnej na ni ouhledně karfiol, uvař žejdlík sladké smetany, nech ji vychladnout, rozkloktej v ní dobře 12 žloutků, trochu to osol, pak to nalej na karfiol a dej to do trouby; když to po vrchu trochu ztuhne, udělej okolo věnec buď z račích ocásků nebo šparglových hlaviček, nebo z mladých a čerstvých smržičků, nebo také jen ž ocásků a stejných kousků karfiolu, s petruželovými lístky promíchaného (to <b>s</b>e zanechává vtipu kuchařky, kterak to chce okrášlit), po vrchu se poklade vše ještě račím máslem a nechá se to v troubí zvolna pěkně do žlutá upéct, potom se to dá na tabuli i s mísou, v které se to peklo.</p>
+<p>Uvař karfiol na polo v hovězí polívce, vymaž mísu máslem, urovnej na ni ouhledně karfiol, uvař žejdlík sladké smetany, nech ji vychladnout, rozkloktej v ní dobře 12 žloutků, trochu to osol, pak to nalej na karfiol a dej to do trouby; když to po vrchu trochu ztuhne, udělej okolo věnec buď z račích ocásků nebo šparglových hlaviček, nebo z mladých a čerstvých smržičků, nebo také jen ž ocásků a stejných kousků karfiolu, s petruželovými lístky promíchaného (to se zanechává vtipu kuchařky, kterak to chce okrášlit), po vrchu se poklade vše ještě račím máslem a nechá se to v troubí zvolna pěkně do žlutá upéct, potom se to dá na tabuli i s mísou, v které se to peklo.</p>
 
 <a name="karfiol-ve-fasi-pro-8-osob"><h2>Karfiol ve faši pro 8 osob</h2></a>
 
