--- a/src/cukrovinky.html
+++ b/src/cukrovinky.html
@@ -42,7 +42,7 @@
 
 <a name="mandlove-rizky"><h2>Mandlové řízky</h2></a>
 
-<p>Ustrouhej čtvrt libry mandlí se <b>s</b>lupkami<b>, </b>utluč čtvrt libry cukru, dej to dohromady, zadělej to jedním bílkem, nařež z oplatku dlouhé lístky, pomaž každý asi na stéblo tlustě tím těstíčkem a nech je na plechu zvolna pect. Když jsou dost, potři je vanilovým ledem.</p>
+<p>Ustrouhej čtvrt libry mandlí se slupkami, utluč čtvrt libry cukru, dej to dohromady, zadělej to jedním bílkem, nařež z oplatku dlouhé lístky, pomaž každý asi na stéblo tlustě tím těstíčkem a nech je na plechu zvolna pect. Když jsou dost, potři je vanilovým ledem.</p>
 
 <a name="mandlove-tasky"><h2>Mandlové tašky</h2></a>
 
@@ -50,7 +50,7 @@
 
 <a name="anyzove-kornoutky"><h2>Anýzové kornoutky</h2></a>
 
-<p>Dej na váhu dvě vejce, zvaž tolik tlučeného cukru a za jedno vejce mouky, potom vejce roztluč do hrnku, dej k nim ten cukr i tu mouku, a míchej to půl hodiny; pak pomaž plech voskem, otři jej prozíravým papírem, a nalévej naň lžíci malinké lívanečky vždy hezký kousek od sebe, posyp každý povrchu trochu anýzem (to se musí hodně čerstvě dělat, aby nepřischly) a <b>s</b>trč je do hezky teplé trouby; hned však musíš na ně dohlídnout, aby se nespálily. Když jsou do zlatova upečeny, vytáhni je, každý od plechu nožem odloupni, otoč ho kolem vařečky; hodně ho na sebe přitlač, a tak pokračuj, až jsou všechny; to se však musí všecko velmi spěšně dít, sice se neotočí.</p>
+<p>Dej na váhu dvě vejce, zvaž tolik tlučeného cukru a za jedno vejce mouky, potom vejce roztluč do hrnku, dej k nim ten cukr i tu mouku, a míchej to půl hodiny; pak pomaž plech voskem, otři jej prozíravým papírem, a nalévej naň lžíci malinké lívanečky vždy hezký kousek od sebe, posyp každý povrchu trochu anýzem (to se musí hodně čerstvě dělat, aby nepřischly) a strč je do hezky teplé trouby; hned však musíš na ně dohlídnout, aby se nespálily. Když jsou do zlatova upečeny, vytáhni je, každý od plechu nožem odloupni, otoč ho kolem vařečky; hodně ho na sebe přitlač, a tak pokračuj, až jsou všechny; to se však musí všecko velmi spěšně dít, sice se neotočí.</p>
 
 <a name="cukrova-zemcatka"><h2>Cukrová zemčátka</h2></a>
 
@@ -204,7 +204,7 @@
 
 <a name="ocukrovane-amarelky"><h2>Ocukrované amarelky</h2></a>
 
-<p>Vyber pěkné, ne přezralé amarelky, ale šťopky neotrhuj; nech čtvrt libry cukru k šestému stupni zvařit, a odstav ho, načež vezmi vždy tři amarelky za šťopky<b>, </b>omoč je v něm a otáčej je trochu v ruce, aby se cukr všude kolem obalil; ostatně s nimi nakládej jako s předešlými věcmi.</p>
+<p>Vyber pěkné, ne přezralé amarelky, ale šťopky neotrhuj; nech čtvrt libry cukru k šestému stupni zvařit, a odstav ho, načež vezmi vždy tři amarelky za šťopky, omoč je v něm a otáčej je trochu v ruce, aby se cukr všude kolem obalil; ostatně s nimi nakládej jako s předešlými věcmi.</p>
 
 <p>Tak se též višně připravují.</p>
 
