--- a/src/salaty.html
+++ b/src/salaty.html
@@ -78,4 +78,4 @@
 
 <a name="salat-ze-syroveho-masa"><h2>Salát ze syrového masa</h2></a>
 
-<p>Seškrab ostrou plechovou lžicí libru hovězího masa z kejty na kasičku<b>, </b>pak udělej z toho na talíř čtyry hromádky, posyp je solí, pepřem a velmi drobounce nasekanou cibulí, polej to octem a olejem, a nech to nejméně půl hodiny stát, aby se chuť z přísad do masa vtáhla. Můžeš k tomu také připojit sardele, kaprle a na tvrdo vařené skrájené vejce.</p>
+<p>Seškrab ostrou plechovou lžicí libru hovězího masa z kejty na kasičku, pak udělej z toho na talíř čtyry hromádky, posyp je solí, pepřem a velmi drobounce nasekanou cibulí, polej to octem a olejem, a nech to nejméně půl hodiny stát, aby se chuť z přísad do masa vtáhla. Můžeš k tomu také připojit sardele, kaprle a na tvrdo vařené skrájené vejce.</p>
