Nahrazení čísel odkazy

--- a/src/dorty.html
+++ b/src/dorty.html
@@ -40,7 +40,7 @@
 
 <a name="dort-mramorovy"><h2>Dort mramorový</h2></a>
 
-<p>Udělá se těsto zcela tak jako v předešlém čísle, pak se rozdělí na pět dílů, do jednoho dílu se dá čtvrt libry drobně na struhadle ustrouhané čokolády do druhého čtvrt libry drobnince rozkrájených pistacií, do třetího trochu karmínu, a dva díly se nechají žluté; potom se vymaže forma, vyloží se papírem, dává se do ní po lžíci střídavě pěkně jedno vedle druhého, až je všecko ve formě, a nechá se to zlehounka pect; pak se dort vyklopí a jako předešlý okrášlí.</p>
+<p>Udělá se těsto zcela tak jako v předešlém receptu, pak se rozdělí na pět dílů, do jednoho dílu se dá čtvrt libry drobně na struhadle ustrouhané čokolády do druhého čtvrt libry drobnince rozkrájených pistacií, do třetího trochu karmínu, a dva díly se nechají žluté; potom se vymaže forma, vyloží se papírem, dává se do ní po lžíci střídavě pěkně jedno vedle druhého, až je všecko ve formě, a nechá se to zlehounka pect; pak se dort vyklopí a jako předešlý okrášlí.</p>
 
 <a name="piskotovy-dort-se-zavareninkou"><h2>Piškotový dort se zavařeninkou</h2></a>
 
@@ -100,7 +100,7 @@
 
 <a name="dort-maslovy-nebo-listkovy"><h2>Dort máslový nebo lístkový</h2></a>
 
-<p>Udělej máslové těsto dle čís. <b></b>(str. 168), rozválej ho na dvě stébla tlustě, polož na něj mísu, jak velký má dort býti, a vykroj kolem list, potom vykroj ještě pět nebo šest listů, každý o něco menší, polož je na papíry, pomaž je vejci a nech je upect. Když jsou vychladlé, pomaž každý jinou zavařeninkou a klad je, od největšího zapínajíc, na sebe, poslední nejmenší přiklop pavrch a nepomazuj ho; potom udělej <a href="ledy-rozlicnych-barev.html#bily-led">bílý led</a>, potři ním všude dort, posyp ho řídce nasekanými pistáciemi a dej ho do vlažné pece nebo trouby osušit.</p>
+<p>Udělej <a href="pastyky.html#maslove-testo-k-pastykam">máslové těsto</a>, rozválej ho na dvě stébla tlustě, polož na něj mísu, jak velký má dort býti, a vykroj kolem list, potom vykroj ještě pět nebo šest listů, každý o něco menší, polož je na papíry, pomaž je vejci a nech je upect. Když jsou vychladlé, pomaž každý jinou zavařeninkou a klad je, od největšího zapínajíc, na sebe, poslední nejmenší přiklop pavrch a nepomazuj ho; potom udělej <a href="ledy-rozlicnych-barev.html#bily-led">bílý led</a>, potři ním všude dort, posyp ho řídce nasekanými pistáciemi a dej ho do vlažné pece nebo trouby osušit.</p>
 
 <a name="dort-se-smetanovou-penou"><h2>Dort se smetanovou pěnou</h2></a>
 
