--- a/src/rozlicne-ryby.html
+++ b/src/rozlicne-ryby.html
@@ -86,7 +86,7 @@
 
 <a name="stika-s-ustricemi"><h2>Štika s ústřicemi</h2></a>
 
-<p>Uvař štiku na modro dle čísla 4.; dej do hrnečku kousek másla, asi 4 sardele, dobře usekané játra ze štiky a několik ústřic nebo mušlí, přidej k tomu ostrouhanou, ve víně namočenou žemličku, trochu květu, trochu citronové kůry, a vše s vínem dobře rozmíchej, pak to zakloktej polívkou, v které štika se vařila, a nech to jen trochu spejchnout; potom to nalej na Štiku, a buď to zaceď citronovou šťávou, nebo okrášli mísu do věnečka urovnanými citronovými čtvrtkami. – Tak se mohou také připravovat okouni, líni a jiné ryby bílého masa.</p>
+<p>Uvař <a href="#kapr-na-modro">štiku na modro</a>; dej do hrnečku kousek másla, asi 4 sardele, dobře usekané játra ze štiky a několik ústřic nebo mušlí, přidej k tomu ostrouhanou, ve víně namočenou žemličku, trochu květu, trochu citronové kůry, a vše s vínem dobře rozmíchej, pak to zakloktej polívkou, v které štika se vařila, a nech to jen trochu spejchnout; potom to nalej na Štiku, a buď to zaceď citronovou šťávou, nebo okrášli mísu do věnečka urovnanými citronovými čtvrtkami. – Tak se mohou také připravovat okouni, líni a jiné ryby bílého masa.</p>
 
 <a name="stika-na-holandsky-zpusob"><h2>Štika na holandský způsob</h2></a>
 
@@ -108,7 +108,7 @@
 
 <a name="studena-stika-a-aspikem"><h2>Studená štika a aspikem</h2></a>
 
-<p>Uvař štiku jak obyčejně na modro a nech ji trochu prochladnout, pak s ni stáhni kůži, kůstky vyber, bílé masíčko rozlož pěkně na lístky a urovnej je na mísu; pak omej v teplé vodě trochu dymiánu a několik bobkových lístků, aby na nich prach nezůstal, a utluč to v moždíři s několika na tvrdo uvařenými žloutkami; zatím nech uvařit žemličku na hustou kasičku v té polívce, v které se štika vařila, dej ji do moždíře k tomu ostatnímu, nalej na to trochu octa a trochu té polívky, dobře to rozmíchej, pak to proceď, přilej ještě trochu octa a oleje, polej tím to urovnané masíčko ze štiky, a okolo udělej věnec z postního rosolu číslo 26</p>
+<p>Uvař štiku jak obyčejně na modro a nech ji trochu prochladnout, pak s ni stáhni kůži, kůstky vyber, bílé masíčko rozlož pěkně na lístky a urovnej je na mísu; pak omej v teplé vodě trochu dymiánu a několik bobkových lístků, aby na nich prach nezůstal, a utluč to v moždíři s několika na tvrdo uvařenými žloutkami; zatím nech uvařit žemličku na hustou kasičku v té polívce, v které se štika vařila, dej ji do moždíře k tomu ostatnímu, nalej na to trochu octa a trochu té polívky, dobře to rozmíchej, pak to proceď, přilej ještě trochu octa a oleje, polej tím to urovnané masíčko ze štiky, a okolo udělej věnec z <a href="#postni-aspik">postního rosolu</a>.</p>
 
 <a name="losos-na-modro"><h2>Losos na modro</h2></a>
 
@@ -132,7 +132,7 @@
 
 <a name="marinovany-losos-s-aspikem"><h2>Marinovaný losos s aspikem</h2></a>
 
-<p>Dobře očištěného lososa rozkrájej na kusy, posyp ho solí a pepřem, a nech ho tak asi hodinu ležet; nalej na rendlík jeden díl studničné vody, jeden díl vína a jeden díl vinního octa, dej do toho dvě cibule, bobkový list, celý pepř, nové kořeni, zázvor, hřebíček, a nech to zvařit, pak lososa do toho vlož, ještě ho trochu přisol a nech ho dobré půl hodiny vařit; potom ho vyndej do jiné nádoby, tu zvařeninu naň skrze ubrousek proceď, nádobu obvaz papírem a uschovej to ve studeném místě. Když pak chceš lososa dáti na stůl, tedy ho vyndej na mísu, posyp jej nakrájenou. citronovou kůrou a okrášli ho postním aspikem čís. 26 jako štiku.</p>
+<p>Dobře očištěného lososa rozkrájej na kusy, posyp ho solí a pepřem, a nech ho tak asi hodinu ležet; nalej na rendlík jeden díl studničné vody, jeden díl vína a jeden díl vinního octa, dej do toho dvě cibule, bobkový list, celý pepř, nové kořeni, zázvor, hřebíček, a nech to zvařit, pak lososa do toho vlož, ještě ho trochu přisol a nech ho dobré půl hodiny vařit; potom ho vyndej do jiné nádoby, tu zvařeninu naň skrze ubrousek proceď, nádobu obvaz papírem a uschovej to ve studeném místě. Když pak chceš lososa dáti na stůl, tedy ho vyndej na mísu, posyp jej nakrájenou. citronovou kůrou a okrášli ho <a href="#postni-aspik">postním aspikem</a> jako štiku.</p>
 
 <a name="losos-s-majonezovou-omackou"><h2>Losos s majonézovou omáčkou</h2></a>
 
@@ -158,7 +158,7 @@
 
 <a name="rosolovany-ouhor"><h2>Rosolovaný ouhoř</h2></a>
 
-<p>Očištěného, nasoleného a nakrájeného ouhoře upeč na másle a nech ho vystydnout. Nalej do formy na malík vysoko postního aspiku číslo 26 a nech ho ustydnout, pak na něj vylož hvězdu z citrónových koláčků, nalej na ni opět studeného aspiku a nech jej zase ztuhnout, potom na to pěkně urovnej toho pečeného ouhoře, formu doplň aspikem a nech to u ledu nebo v jiném studeném místě docela ztuhnout; pak omoč formu v horké vodě a rosol vyklop na mísu. Na stůl děj k němu ocet, olej a pepř.</p>
+<p>Očištěného, nasoleného a nakrájeného ouhoře upeč na másle a nech ho vystydnout. Nalej do formy na malík vysoko <a href="#postni-aspik">postního aspiku</a> a nech ho ustydnout, pak na něj vylož hvězdu z citrónových koláčků, nalej na ni opět studeného aspiku a nech jej zase ztuhnout, potom na to pěkně urovnej toho pečeného ouhoře, formu doplň aspikem a nech to u ledu nebo v jiném studeném místě docela ztuhnout; pak omoč formu v horké vodě a rosol vyklop na mísu. Na stůl děj k němu ocet, olej a pepř.</p>
 
 <a name="ouhor-s-majonezovon-omackou"><h2>Ouhoř s majonézovon omáčkou</h2></a>
 
@@ -190,7 +190,7 @@
 
 <a name="smazena-lupice"><h2>Smažená lupice</h2></a>
 
-<p>Chceš-li tuto vzácnou rybu hodně zužitkovat, tedy jí můžeš polovici upravit na některý z předešlých způsobů a polovici usmaž tak jako kapra číslo 7</p>
+<p>Chceš-li tuto vzácnou rybu hodně zužitkovat, tedy jí můžeš polovici upravit na některý z předešlých způsobů a polovici usmaž tak jako <a href="#kapr-smazeny">kapra</a>.</p>
 
 <a name="lupice-s-majonezovou-omackou"><h2>Lupice s majonézovou omáčkou</h2></a>
 
@@ -220,11 +220,11 @@
 
 <a name="pstruhove-s-holandskou-omackou"><h2>Pstruhové s holandskou omáčkou</h2></a>
 
-<p>Pstruhy oškrab, náležitě očisti, osol a nech je tak asi hodinu ležet; pak si připrav na rendlík vše, co je zapotřebí k modré rybě (viz číslo 4, str. 320), postav to na oheň a dělej zatím omáčku. Dej do hrnečku čtvrt žejdlíka vína, dvě lžíce octa, šest žloutků, z jednoho pomeranče šťávu, trochu tlučeného pepře, trošku soli a kousek cukru, postav to na oheň a stále tím kloktej jako při šodó, vařit se to však nesmí; mezitím vlož pstruhy do připravené vařící marinády a nech je jenom deset minut vařit, pak je vyndej na misku a polej je tou omáčkou, která zatím mezi ustavičným kloktáním musí se zvedat, nikoli však vařit; je-li příliš hustá, přidej do ní trochu polívky, v nížto pstruhové se vařili.</p>
+<p>Pstruhy oškrab, náležitě očisti, osol a nech je tak asi hodinu ležet; pak si připrav na rendlík vše, co je zapotřebí k <a href="#kapr-na-modro">modré rybě</a>, postav to na oheň a dělej zatím omáčku. Dej do hrnečku čtvrt žejdlíka vína, dvě lžíce octa, šest žloutků, z jednoho pomeranče šťávu, trochu tlučeného pepře, trošku soli a kousek cukru, postav to na oheň a stále tím kloktej jako při šodó, vařit se to však nesmí; mezitím vlož pstruhy do připravené vařící marinády a nech je jenom deset minut vařit, pak je vyndej na misku a polej je tou omáčkou, která zatím mezi ustavičným kloktáním musí se zvedat, nikoli však vařit; je-li příliš hustá, přidej do ní trochu polívky, v nížto pstruhové se vařili.</p>
 
 <a name="pstruhove-v-aspiku"><h2>Pstruhové v aspiku</h2></a>
 
-<p>Připrav si postní aspik číslo 26. Pstruhy zab, oškrab, vykuchej, omej a rozkrájej je na kousky. Mezitím nech na rendlíku vodu s octem, solí a pepřem zvařit, pak vlož pstruhy do toho a nech je jen asi deset minut vařit, načež je vyndej a nech je vystydnout. Potom nalej do formy trochu svrchu zmíněného aspiku a nech ho ztuhnout, pak pstruhy urovnej do prostřed tak, aby mezi formou a pstruhami zůstala na prst široká mezera, a máš-li račí ocásky nebo karfiol, tedy vzhled jídla tohoto velmi zvýšíš, když pstruhy uvařenými, oloupanými račími ocásky a rozebraným karfiolem proložíš, načež formu studeným tekutým aspikem doplň a nech to u ledu nebo ve chladném místě ztuhnout. Když to chceš dáti na stůl, omoč formu v horké vodě, otři ji, vyklop rosol na mísil a oblož jej na čtvrtky rozkrájeným citronem.</p>
+<p>Připrav si <a href="#postni-aspik">postní aspik</a>. Pstruhy zab, oškrab, vykuchej, omej a rozkrájej je na kousky. Mezitím nech na rendlíku vodu s octem, solí a pepřem zvařit, pak vlož pstruhy do toho a nech je jen asi deset minut vařit, načež je vyndej a nech je vystydnout. Potom nalej do formy trochu svrchu zmíněného aspiku a nech ho ztuhnout, pak pstruhy urovnej do prostřed tak, aby mezi formou a pstruhami zůstala na prst široká mezera, a máš-li račí ocásky nebo karfiol, tedy vzhled jídla tohoto velmi zvýšíš, když pstruhy uvařenými, oloupanými račími ocásky a rozebraným karfiolem proložíš, načež formu studeným tekutým aspikem doplň a nech to u ledu nebo ve chladném místě ztuhnout. Když to chceš dáti na stůl, omoč formu v horké vodě, otři ji, vyklop rosol na mísil a oblož jej na čtvrtky rozkrájeným citronem.</p>
 
 <p>Smažení pstruhové připravějí se jako <a href="#kapr-smazeny">smažený kapr</a>.</p>
 
