--- a/src/salaty.html
+++ b/src/salaty.html
@@ -10,7 +10,7 @@
 
 <a name="hlavkovy-salat-s-kyselou-smetanou"><h2>Hlávkový salát s kyselou smetanou</h2></a>
 
-<p>Připrav hlávkový salát jako v předešlých číslech, dej ho do misky, sceď s něho všechnu vodu, osol ho trochu, nalej na něj dobrou hustou kyselou smetanu, posyp ho trochu tlučeným pepřem a dobře to promíchej, pak salát na misce urovnej a posyp ho dobře nakrájenou pažitkou.</p>
+<p>Připrav hlávkový salát jako v předešlých receptech, dej ho do misky, sceď s něho všechnu vodu, osol ho trochu, nalej na něj dobrou hustou kyselou smetanu, posyp ho trochu tlučeným pepřem a dobře to promíchej, pak salát na misce urovnej a posyp ho dobře nakrájenou pažitkou.</p>
 
 <a name="hlavkovy-salat-se-slaninou"><h2>Hlávkový salát se slaninou</h2></a>
 
@@ -38,7 +38,7 @@
 
 <a name="sladky-salat"><h2>Sladký salát</h2></a>
 
-<p>Ostrouhej žemličky, rozkrájej je na lístky a vysmaž je pěkně do zlatová v přepouštěném rozpáleném másle, pak je ouhledně poklaď na mísu, na cukru ostrouhej kůru s jednoho citronu a jednoho pomeranče, posyp žemličky tím cukrem, vymačkej na ně šťávu z toho citronu a pomeranče, udělej okolek z andivie, dle čísla 8. připravené, a nech to stát na chladném místě, až se to dá na tabuli.</p>
+<p>Ostrouhej žemličky, rozkrájej je na lístky a vysmaž je pěkně do zlatová v přepouštěném rozpáleném másle, pak je ouhledně poklaď na mísu, na cukru ostrouhej kůru s jednoho citronu a jednoho pomeranče, posyp žemličky tím cukrem, vymačkej na ně šťávu z toho citronu a pomeranče, udělej <a href="#salat-z-andivie">okolek z andivie</a> a nech to stát na chladném místě, až se to dá na tabuli.</p>
 
 <a name="salat-rerichovy"><h2>Salát řeřichový</h2></a>
 
