--- a/src/smazeniny-pofezky-svitky-a-kotletky.html
+++ b/src/smazeniny-pofezky-svitky-a-kotletky.html
@@ -56,7 +56,7 @@
 
 <a name="tytez-kotletky-na-jiny-zpusob"><h2>Tytéž kotletky na jiný způsob</h2></a>
 
-<p>Nasekej a sklepej kotletky na předešlý způsob, kůstky opět oškrab, kotletky ouhledně zakulať, osol je, omoč v rozpuštěném másle, obal ve strouhané žemličce a nech je ležet; když je čas ku smaženi, tedy je opět <i>oinoé </i>v másle, obal zase ve strouhané žemličce a smaž je <b><i>ý</i></b> rozpáleném másle nebo sádle. Můžeš jimi poklásti jakoukoli zeleninu.</p>
+<p>Nasekej a sklepej kotletky na předešlý způsob, kůstky opět oškrab, kotletky ouhledně zakulať, osol je, omoč v rozpuštěném másle, obal ve strouhané žemličce a nech je ležet; když je čas ku smaženi, tedy je opět omoč v másle, obal zase ve strouhané žemličce a smaž je v rozpáleném másle nebo sádle. Můžeš jimi poklásti jakoukoli zeleninu.</p>
 
 <a name="nadivane-teleci-rizky"><h2>Nadívané telecí řízky</h2></a>
 
@@ -92,7 +92,7 @@
 
 <a name="svitek-z-teleci-ledvinky"><h2>Svitek z telecí ledvinky</h2></a>
 
-<p>Někdo nejí rád telecí ledvinku pro tučnost; v tom pádu odřízni celou ledvinku, a když vystydne, skrájej ji okrouhlým nožem na drobninko, dej ji do hrnku, vraz k ní pět celých vajec, osol to, přidej k tomu tři vrchovaté lžíce strouhané žemličky, trochu drobně nakrájené citronové kůry, trochu nasekané zelené petružele, a dobře ho promíchej, pak vymaž kastrolek máslem, vysyp ho strouhanou žemličkou, vlej do něho tu míšeninu a nech to v troubě do zlatová upéct; potom svítek <b>vy</b>klop a dej ho na stůl buď co samostatné jídlo, nebo ho rozkrájej a poklaď jim buď mrkev aneb jinou zeleninu.</p>
+<p>Někdo nejí rád telecí ledvinku pro tučnost; v tom pádu odřízni celou ledvinku, a když vystydne, skrájej ji okrouhlým nožem na drobninko, dej ji do hrnku, vraz k ní pět celých vajec, osol to, přidej k tomu tři vrchovaté lžíce strouhané žemličky, trochu drobně nakrájené citronové kůry, trochu nasekané zelené petružele, a dobře ho promíchej, pak vymaž kastrolek máslem, vysyp ho strouhanou žemličkou, vlej do něho tu míšeninu a nech to v troubě do zlatová upéct; potom svítek vyklop a dej ho na stůl buď co samostatné jídlo, nebo ho rozkrájej a poklaď jim buď mrkev aneb jinou zeleninu.</p>
 
 <a name="svitek-z-okruzi"><h2>Svítek z okruží</h2></a>
 
