--- a/src/vejce.html
+++ b/src/vejce.html
@@ -58,7 +58,7 @@
 
 <a name="vejce-a-okurkami"><h2>Vejce a okurkami</h2></a>
 
-<p>Udělej asi z osmi pěkných sardelí máslo, hled ale, aby máslo bylo čerstvé; pak uvař na tvrdo asi 3 vejce, a usekej bílky zvlášť a žloutky také zvlášť; potom roztluč asi 10 vajec a udělej je jako obyčejné míchané vejce dle čísla 5., nesmějí ale ztvrdnout; když jsou hotové, dej je na teplý talíř, posyp je těmi rozkrájenými bílky, ze sardelového másla udělej do věnečka pěkné hromádky a posyp je těmi sekanými žloutky. Okurky na půlky rozkrájené urovnej do věnečka okolo talíře.</p>
+<p>Udělej asi z osmi pěkných sardelí máslo, hled ale, aby máslo bylo čerstvé; pak uvař na tvrdo asi 3 vejce, a usekej bílky zvlášť a žloutky také zvlášť; potom roztluč asi 10 vajec a udělej je jako obyčejné <a href="#michane-vejce">míchané vejce</a>, nesmějí ale ztvrdnout; když jsou hotové, dej je na teplý talíř, posyp je těmi rozkrájenými bílky, ze sardelového másla udělej do věnečka pěkné hromádky a posyp je těmi sekanými žloutky. Okurky na půlky rozkrájené urovnej do věnečka okolo talíře.</p>
 
 <a name="smazene-vejce-a-horcici"><h2>Smažené vejce a hořčici</h2></a>
 
