--- a/src/zadelavana-a-dusena-jidla.html
+++ b/src/zadelavana-a-dusena-jidla.html
@@ -64,7 +64,7 @@
 
 <a name="kurata-s-majonezovou-omackou"><h2>Kuřata s majonézovou omáčkou</h2></a>
 
-<p>Uvař kuřata v hovězí polívce, nakrájej je na ouhledné kousky, urovnej je na mísu, polej je majonézovou omáčkou čís. 22 a okrášli je račími ocásky, na tvrdo uvařenými, na koláčky nakrájenými vejci a ve víně uvařenými lanýžemi.</p>
+<p>Uvař kuřata v hovězí polívce, nakrájej je na ouhledné kousky, urovnej je na mísu, polej je <a href="prichoutky-cili-asietky.html#teleci-mozek-s-majonezovou-omackou">majonézovou omáčkou</a> a okrášli je račími ocásky, na tvrdo uvařenými, na koláčky nakrájenými vejci a ve víně uvařenými lanýžemi.</p>
 
 <a name="kurata-s-cernou-omackou"><h2>Kuřata s černou omáčkou</h2></a>
 
