--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
-<a href="predmluva.html" class="hlavicka"><h1>Domácí kuchařka</h1></a>
+<a href="about.html" class="hlavicka"><h1>Domácí kuchařka</h1></a>
 
 <ul>
+<li><a href="predmluva.html">Předmluva</a></li>
 <li><a href="uvod.html">Úvod</a></li>
 <li><a href="polivky-masite.html">Polívky masité</a></li>
 <li><a href="prichoutky-cili-asietky.html">Příchoutky čili asietky</a></li>
